--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
@@ -54,10 +54,10 @@
                             <Label Text="{Binding ShowedUser.Email}" Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="3"></Label>
                             <Label Text="{i18n:Translate Phone}" Grid.Row="10" Grid.Column="1"></Label>
                             <Label Text="{Binding ShowedUser.Phone}" Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="3"></Label>
-                            <Label  Font="Bold" Text="{i18n:Translate Picture}" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="4"></Label>
-                            <!--This is used as a seperator line in the grid-->
+                            <!--<Label  Font="Bold" Text="{i18n:Translate Picture}" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                            --><!--This is used as a seperator line in the grid--><!--
                             <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="4"/>
-                            <Image Source="{Binding ShowedUser.Picture}" Grid.Row="14" Grid.Column="2" Grid.ColumnSpan="2"></Image>
+                            <Image Source="{Binding ShowedUser.Picture}" Grid.Row="14" Grid.Column="2" Grid.ColumnSpan="2"></Image>-->
                         </Grid>
                     </ScrollView>
                     <StackLayout>
