--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ConnectToNursingHomePage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ConnectToNursingHomePage.xaml
@@ -18,7 +18,7 @@
                 <StackLayout Margin="10" Padding="1" BackgroundColor="#0099cc">
                     <Entry BackgroundColor="White" Placeholder="{i18n:Translate ConnectToNursingHomePlaceholderText}" Text="{Binding ConnectionId}" ></Entry>
                 </StackLayout>
-                <Label  Margin="10" TextColor="#0099cc" Font="Bold" Text="Indtast plejehjemmets id, se Idet i den plejehjemmets account information"></Label>
+                <Label  Margin="10" TextColor="#0099cc" Font="Bold" Text="{i18n:Translate InsertCarecenterIdText}"></Label>
             </StackLayout>
         </StackLayout>
         <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
