--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
@@ -16,12 +16,14 @@
                             <Image x:Name="imageElderlyHands" Source="elderlyhands.png" ></Image>
                         </StackLayout>
                         <StackLayout x:Name="secondInnerStack" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Padding="10">
-                            <Entry Text="{Binding FirstName}" Placeholder="First name" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
-                            <Entry Text="{Binding LastName}"  Placeholder="Last name" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
+                            <Entry Text="{Binding FirstName}" Placeholder="{i18n:Translate FirstName}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
+                            <Entry Text="{Binding LastName}"  Placeholder="{i18n:Translate LastName}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                             <Entry Text="{Binding Email}"  Keyboard="Email" Placeholder="{i18n:Translate Email}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                             <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
-                            <Label HorizontalTextAlignment="Center" Margin="10" Text="Opret konto som:" Font="Bold"></Label>
-                            <Picker WidthRequest="150" HorizontalOptions="Center"  SelectedItem="{Binding SelecteRoleName,Mode=TwoWay}" x:Name="rolePicker"  ItemsSource="{Binding RoleCollection}" Title="Role"  ></Picker>
+                            <StackLayout HorizontalOptions="CenterAndExpand" x:Name="RolePickerStackLayout">
+                                <Label HorizontalTextAlignment="Center" Margin="10" Text="{i18n:Translate CreateAccountAs}" Font="Bold"></Label>
+                                <Picker WidthRequest="150" HorizontalOptions="Center"  SelectedItem="{Binding SelecteRoleName,Mode=TwoWay}" x:Name="rolePicker"  ItemsSource="{Binding RoleCollection}" Title="{i18n:Translate Role}"  ></Picker>
+                         </StackLayout>
                         </StackLayout>
                     </StackLayout>
                     <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
@@ -33,7 +35,7 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <customRenders:CustomButtonRender  Style="{StaticResource CancelButtonStyle}" Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" Grid.Column="0" ></customRenders:CustomButtonRender>
-                            <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Command="{Binding CreateAccountCommand}" Text="Create Account" Grid.Column="1" />
+                            <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Command="{Binding CreateAccountCommand}" Text="{i18n:Translate CreateAccount}" Grid.Column="1" />
                         </Grid>
                     </StackLayout>
                 </StackLayout>
@@ -45,12 +47,12 @@
                             <Image x:Name="imageElderlyHandsTablet" Source="elderlyhands.png" ></Image>
                         </StackLayout>
                         <StackLayout x:Name="secondInnerStackTablet" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Padding="10">
-                            <Entry FontSize="22" HeightRequest="60" Text="{Binding FirstName}" Placeholder="First name" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
-                            <Entry FontSize="22" HeightRequest="60" Text="{Binding LastName}"  Placeholder="Last name" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
+                            <Entry FontSize="22" HeightRequest="60" Text="{Binding FirstName}" Placeholder="{i18n:Translate FirstName}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
+                            <Entry FontSize="22" HeightRequest="60" Text="{Binding LastName}"  Placeholder="{i18n:Translate LastName}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                             <Entry FontSize="22" HeightRequest="60" Text="{Binding Email}"  Keyboard="Email" Placeholder="{i18n:Translate Email}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                             <Entry FontSize="22" HeightRequest="60" Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
-                            <Label FontAttributes="Bold" FontSize="22" HeightRequest="60" HorizontalTextAlignment="Center" Margin="10" Text="Opret konto som:" ></Label>
-                            <Picker HeightRequest="60" WidthRequest="150" HorizontalOptions="Center"  SelectedItem="{Binding SelecteRoleName,Mode=TwoWay}" ItemsSource="{Binding RoleCollection}" Title="Role"  ></Picker>
+                            <Label FontAttributes="Bold" FontSize="22" HeightRequest="60" HorizontalTextAlignment="Center" Margin="10" Text="{i18n:Translate CreateAccountAs}" ></Label>
+                            <Picker HeightRequest="60" WidthRequest="150" HorizontalOptions="Center"  SelectedItem="{Binding SelecteRoleName,Mode=TwoWay}" ItemsSource="{Binding RoleCollection}" Title="{i18n:Translate Role}"  ></Picker>
                         </StackLayout>
                     </StackLayout>
                     <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
@@ -62,7 +64,7 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <customRenders:CustomButtonRender HeightRequest="80" Style="{StaticResource CancelButtonStyle}" Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" Grid.Column="0" ></customRenders:CustomButtonRender>
-                            <customRenders:CustomButtonRender HeightRequest="80" Style="{StaticResource ButtonStyle}" Command="{Binding CreateAccountCommand}" Text="Create Account" Grid.Column="1" />
+                            <customRenders:CustomButtonRender HeightRequest="80" Style="{StaticResource ButtonStyle}" Command="{Binding CreateAccountCommand}" Text="{i18n:Translate CreateAccount}" Grid.Column="1" />
                         </Grid>
                     </StackLayout>
                 </StackLayout>
