--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CalendarPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CalendarPage.xaml
@@ -10,17 +10,17 @@
 
     <ContentPage.Content>
         <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
-            <customRenders:CustomButtonRender AbsoluteLayout.LayoutFlags="PositionProportional" Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SeeTodaysAppointments}" Command="{Binding GoToDayViewCommand}">
+            <customRenders:CustomButtonRender x:Name="TodaysAppointments" AbsoluteLayout.LayoutFlags="PositionProportional" Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SeeTodaysAppointments}" Command="{Binding GoToDayViewCommand}">
                 <AbsoluteLayout.LayoutBounds>
                     <OnIdiom x:TypeArguments="Rectangle" Phone=".50,.25, 300, 100" Tablet=".50,.25, 500, 150" />
                 </AbsoluteLayout.LayoutBounds>
             </customRenders:CustomButtonRender>
-            <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SeeWeeksAppointments}" AbsoluteLayout.LayoutFlags="PositionProportional"  Command="{Binding GoToWeekViewCommand}">
+            <customRenders:CustomButtonRender x:Name="WeeksAppointments" Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SeeWeeksAppointments}" AbsoluteLayout.LayoutFlags="PositionProportional"  Command="{Binding GoToWeekViewCommand}">
                 <AbsoluteLayout.LayoutBounds>
                     <OnIdiom x:TypeArguments="Rectangle" Phone=".50,.50, 300, 100" Tablet=".50,.50, 500, 150" />
                 </AbsoluteLayout.LayoutBounds>
             </customRenders:CustomButtonRender>
-            <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SeeMonthsAppointments}" AbsoluteLayout.LayoutFlags="PositionProportional"  Command="{Binding GoToMonthViewCommand}">
+            <customRenders:CustomButtonRender x:Name="MonthsAppointments" Style="{StaticResource ButtonStyle}" Text="{i18n:Translate SeeMonthsAppointments}" AbsoluteLayout.LayoutFlags="PositionProportional"  Command="{Binding GoToMonthViewCommand}">
                 <AbsoluteLayout.LayoutBounds>
                     <OnIdiom x:TypeArguments="Rectangle" Phone=".50,.75, 300, 100" Tablet=".50,.75, 500, 150" />
                 </AbsoluteLayout.LayoutBounds>
