--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
@@ -18,7 +18,7 @@
                                 <RowDefinition Height="1" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
-                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="1" />
